src/test/deca/syntax/valid/provided/dec_var_with_init.deca
// Description:
//   
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
//    string z = "T = P";
   int x = 10;
//    float y = 5.6; 

}
